--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.2",
     "slick-carousel": "^1.8.1"
   },
