--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "animate.css": "^4.1.1",
     "framer-motion": "^11.2.6",
     "loaders.css": "^0.1.2",
